--- a/index.html
+++ b/index.html
@@ -16,17 +16,36 @@
         align-items: center;
         margin: 0;
       }
-      html { 
+      html {
         height: 100%;
+        width: 100%;
       }
       body {
         background-color: #202020;
+        width: 100%;
       }
 
       .svg-placeholder {
         width: 100%;
         height: 100%;
       }
+      
+      .svg-wrapper {
+        max-width: 100%;
+        max-height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .svg-wrapper svg {
+        object-fit: contain;
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+      }
+
       .svg.visible {
         display: block;
       }
