--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         width: 100%;
         height: 100%;
         object-fit: contain;
+        overflow: visible;
       }
 
       /* for smoothing  */
